@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
-<addon id="plugin.video.euronews_com" name="euronews.com" version="2.1.3" provider-name="L0RE">
+<addon id="plugin.video.euronews_com" name="euronews.com" version="2.1.4" provider-name="L0RE">
 	<requires>
 		<import addon="xbmc.python" version="2.24.0"/>
 		<import addon="plugin.video.youtube" version="6.1.0"/>
@@ -26,9 +26,8 @@
 			<icon>icon.png</icon>
 			<fanart>fanart.jpg</fanart>
 		</assets>
-		<news>[B][COLOR orangered]Version 2.1.3  (14.07.2019)[/COLOR][/B] by realvito[CR]
-- fixed: Es werden KEINE Ordner in der Übersicht angezeigt (Webseite und Quelltext verändert)
-- optimized: Bei Auswahl = Bev. mit Youtube abspielen - wird jetzt überprüft ob der YT-Link existiert, wenn nicht vorh. wird der Standardlink abgespielt
+		<news>[B][COLOR orangered]Version 2.1.4  (19.07.2019)[/COLOR][/B] by realvito[CR]
+- fixed: Wieder werden KEINE Ordner in der Übersicht angezeigt und ein Fehler wird produziert (Quelltext nochm. verändert)
 		</news>
 	</extension>
 </addon>
