@@ -31,3 +31,6 @@
 [B]Version 2.1.3  (14.07.2019)[/B] by realvito[CR]
 - fixed: Es werden KEINE Ordner in der Übersicht angezeigt (Webseite und Quelltext verändert)
 - optimized: Bei Auswahl = Bev. mit Youtube abspielen - wird jetzt überprüft ob der YT-Link existiert, wenn nicht vorh. wird der Standardlink abgespielt
+
+[B]Version 2.1.4  (19.07.2019)[/B] by realvito[CR]
+- fixed: Wieder werden KEINE Ordner in der Übersicht angezeigt und ein Fehler wird produziert (Quelltext nochm. verändert)
